installation: ipython dependency commented out
* Comments out ipython dependency from extra requirements, since
  ipython's latest versions do not support Python-2.6 anymore,
  since it is an optional package, and since Python developers
  usually have some ipython working version installed already
  anyway.

Signed-off-by: Tibor Simko <tibor.simko@cern.ch>

--- a/requirements-extras.txt
+++ b/requirements-extras.txt
@@ -11,9 +11,13 @@ pep8
 selenium
 winpdb
 mock
-ipython
 cython
 nose
 nosexcover
 flake8
 raven==4.2.1
+
+# Install also some ipython version if you wish; the line below is
+# commented out since newest ipython versions do not work on
+# Python-2.6 anymore:
+# ipython
